Fixes issue with image stretching and max-width: 100% on media item preview.

--- a/css/ombumedia.less
+++ b/css/ombumedia.less
@@ -550,6 +550,7 @@ body.ui-dialog-open {
         margin-left: auto;
         margin-right: auto;
         max-width: 100%;
+        height: auto;
         display: block;
       }
     }
